syntax = "proto3";

package central;

option go_package = "./internalapi/central;central";

message VirtualMachine {
  string id = 1;
  string namespace = 2;
  string name = 3;
  string cluster_id = 4;
  string cluster_name = 5;
  map<string, string> facts = 6;

  repeated VirtualMachineComponent components = 7;
}

message License {
  string name = 1;
  string type = 2;
  string url = 3;
}

message VirtualMachineComponent {
  string name = 1;
  string version = 2;
  License license = 3;
  SourceType source = 4;
  string location = 5;
  string architecture = 6;
}

enum SourceType {
  OS = 0;
  PYTHON = 1;
  JAVA = 2;
  RUBY = 3;
  NODEJS = 4;
  GO = 7;
  DOTNETCORERUNTIME = 5;
  INFRASTRUCTURE = 6;
}
